k8s /ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: multi-tier-web-app
spec:
  ingressClassName: nginx
  rules:
  - host: multi-tier-web-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
